C#/NETTest-DLLMultDev-Callback/NETTest/Program.cs

// See https://aka.ms/new-console-template for more information

using System;
using System.Runtime.InteropServices;
using System.Text;
using System.Threading;  //导入命名空间,类Thread就在此空间中

namespace ConsoleApp
{
    class Program
    {
        const string vmmso_dll_path = @"O:\\MSO\\library\\SharedLibrary\\Windows\\X64\\Release\\vmmultmso.dll";

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int InitDll(int en_log, int en_hard_watchdog);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int FinishDll();

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int ScanDevice();

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int CloseDevice(int dev_id);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int GetDeviceDesString(uint dev_id, StringBuilder des, int des_length);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int GetAvailableDevCount();

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsDevAvailable(int dev_id);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsDataReady(int dev_id);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsSupportDDSDevice(int dev_id);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int GetDDSSupportBoxingStyle(int dev_id, int[] style);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static void SetDDSOutMode(int dev_id, byte channel_index, int out_mode);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static void SetDDSBoxingStyle(int dev_id, byte channel_index, int boxing);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static void SetDDSFreq(int dev_id, byte channel_index, int pinlv);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int GetDDSCurBoxingAmplitudeMv(int dev_id, int boxing);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static void SetDDSAmplitudeMv(int dev_id, byte channel_index, int amplitdude);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static void SetDDSBiasMv(int dev_id, byte channel_index, int bias);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int SetOscChannelRangemV(int dev_id, int channel, int minmv, int maxmv);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int GetOscSupportSampleRateNum(int dev_id);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int GetOscSupportSampleRates(int dev_id, int[] sample, int maxnum);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int SetOscSampleRate(int dev_id, int sample);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int GetOscSampleRate(int dev_id);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int GetMemoryLength(int dev_id);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int ReadVoltageDatas(int dev_id, byte channel, double[] buffer, int length);

        // 读取电压数据的触发点位置
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double ReadVoltageDatasTriggerPoint(int dev_id);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int Capture(int dev_id, int length, short capture_channel, byte force_length);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetVoltageResolution(int dev_id, byte channel);

        // 检查电压数据是否超出范围
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsVoltageDatasOutRange(int dev_id, char channel);

        // 获取电压最小值极限
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetVoltageExtremeMin(int dev_id, char channel);

        // 获取电压最大值极限
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetVoltageExtremeMax(int dev_id, char channel);

        public delegate void DevAddCallBack(IntPtr ppara, int dev_id); //声明委托
        public delegate void DevRemoveCallBack(IntPtr ppara, int dev_id); //声明委托
        // 接口定义  
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        static extern void SetDevNoticeCallBack(IntPtr ppara, DevAddCallBack add, DevRemoveCallBack remove);

        public delegate void DataReadyCallBack(IntPtr ppara, int dev_id); //声明委托
        // 接口定义  
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        static extern void SetDataReadyCallBack(IntPtr ppara, DataReadyCallBack datacallback);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        static extern int IsSupportIODevice(int dev_id);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        static extern int GetSupportIoNumber(int dev_id);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        static extern void SetIOInOut(int dev_id, byte channel, byte inout);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        static extern void SetIOOutState(int dev_id, byte channel, byte state);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        static extern  void IOEnable(int dev_id, byte channel, byte enable);

        public delegate void IOStateCallBack(IntPtr ppara, int dev_id, int state); //声明委托
        // 接口定义  
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        static extern void SetIOReadStateCallBack(IntPtr ppara, IOStateCallBack datacallback);

        // ParaCalReset - 参数校准复位/计算
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int ParaCalReset(
            int para_chn,
            double[] buffer,
            int buffer_length,
            int sample,
            double voltage_resolution,
            double extreme_min,
            double extreme_max
        );

        // 最小值相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsMinOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetMin(int para_chn);

        // 最大值相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsMaxOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetMax(int para_chn);

        // 峰峰值相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsVppOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetVpp(int para_chn);

        // 顶部值相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsTopOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetTop(int para_chn);

        // 底部值相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsBaseOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetBase(int para_chn);

        // 幅度相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsAmplOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetAmpl(int para_chn);

        // 平均值相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsMeanOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetMean(int para_chn);

        // RMS值相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsRmsOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetRms(int para_chn);

        // 频率相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsFreqOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetFreq(int para_chn);

        // 相位相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsPhaseOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetPhase(int para_chn);

        // 周期RMS相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsCycleRmsOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetCycleRms(int para_chn);

        // 周期平均值相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsCycleMeanOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetCycleMean(int para_chn);

        // 正占空比相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsPositiveDutyOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetPositiveDuty(int para_chn);

        // 正脉宽相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsPositivePulseWidthOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetPositivePulseWidth(int para_chn);

        // 负占空比相关
        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static int IsNegativeDutyOk(int para_chn);

        [DllImport(Program.vmmso_dll_path, CallingConvention = CallingConvention.StdCall)]
        extern static double GetNegativeDuty(int para_chn);
